# rust-feature-propagation

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
base/: Cargo.toml
base/src/: lib.rs
comm/: Cargo.toml
comm/src/: lib.rs
sys/: Cargo.toml
sys/src/: lib.rs
